feat(fase-3): agrega organización multiempresa y alcances
